# snowy-january

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  PROGRESS.md  README.md
assets/: level.pdn  mini-dozer.blend  mini-dozer.mtl  tree.blend
include/: capabilityguard.h  clampedvalue.h  game.h  gl-color-normal-position-vertex.h  gl-color-position-vertex.h  gl-masked-textures.h  gl-obj-renderer.h
include/glad/: glad.h
progress/: progress.md
src/: audio.c  game.cpp  gameobject.cpp  gameobject.h  glad.c  imgui_impl_sdl_gl3.cpp  physics.cpp  physics.h  physics_debug.cpp  physicsobject.cpp  physicsobject.h  program.cpp  snowyjanuary.cpp  snowyjanuary.h  updatingtexture.cpp  updatingtexture.h
